# sapling

./: .gitignore  Cargo.toml  README.md
foliage/: .gitignore  build.gradle.kts  graphql.config.yml  settings.gradle.kts
foliage/app/: build.gradle.kts
foliage/app/src/androidTest/java/sapling/foliage/: ExampleInstrumentedTest.kt
foliage/app/src/main/: AndroidManifest.xml
foliage/app/src/main/graphql/sapling/foliage/: DeleteItem.graphql  DeleteProduct.graphql  InsertItem.graphql  InsertProduct.graphql  InventoryQuery.graphql  ProductQuery.graphql  ProductsQuery.graphql
foliage/app/src/main/graphql/sapling/foliage/service/: schema.graphqls
foliage/app/src/main/java/sapling/foliage/: Apollo.kt  Foliage.kt  GraphQLClient.kt  GraphQLViewModel.kt  GraphQlScreen.kt  MainActivity.kt  ViewModelFactory.kt
foliage/app/src/main/java/sapling/foliage/gql/: GraphQLClient.kt  GraphQLViewModel.kt  GraphQlScreen.kt  ViewModelFactory.kt
foliage/app/src/main/java/sapling/foliage/ui/components/: AddItemForm.kt  AddProductForm.kt  BarcodeScanner.kt  MainNavBar.kt
foliage/app/src/main/java/sapling/foliage/ui/screens/: InventoryScreen.kt  SettingsScreen.kt  ShoppingScreen.kt
foliage/app/src/main/java/sapling/foliage/ui/theme/: Color.kt  Theme.kt  Type.kt
foliage/app/src/main/res/values/: strings.xml  themes.xml
foliage/app/src/main/res/xml/: network_security_config.xml
foliage/app/src/test/java/sapling/foliage/: ExampleUnitTest.kt
foliage/gradle/: libs.versions.toml
foliage/gradle/wrapper/: gradle-wrapper.properties
foliage/src/main/graphql/: schema.graphqls
rhizome/: Cargo.toml
rhizome/src/: main.rs  user.rs
rhizome/src/auth/: session.rs
rhizome/src/queries/: create_product_table.sql  create_session_table.sql  create_user_table.sql  fetch_user_session.sql  mod.rs
rhizome/src/routes/: auth.rs  mod.rs  product.rs
sapling/: Cargo.toml  rustfmt.toml
sapling/src/: main.rs  product.rs  session.rs
sapling/src/queries/: delete_item.sql  delete_product.sql  fetch_product_groups.sql  fetch_product_tags.sql  fetch_stocks.sql  fetch_user.sql  insert_item.sql  insert_stock.sql  mod.rs
sapling/src/queries/auth/: register_user.sql
sapling/src/queries/setup/: create_auth_tables.sql  create_tables.sql
sapling/src/schema/: auth.rs  mod.rs  product.rs
spore/: Cargo.toml
spore/src/: lib.rs
src/: main.rs  product.rs  session.rs  user.rs
src/auth/: mod.rs
src/paths/: mod.rs  user.rs
src/queries/: create_session.sql  create_tables.sql  create_user_and_session.sql  fetch_product.sql  fetch_users.sql  insert_product.sql  insert_user.sql  insert_user_session.sql  login_user.sql  mod.rs  register_user.sql
src/queries/auth/: insert_user_session.sql
src/queries/setup/: create_tables.sql
src/routes/: product.rs
src/schema/: auth.rs  mod.rs  product.rs
