[package]
name = "sapling"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.216"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio"] }
tea = { path = "tea" }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
