[workspace]
resolver = "3"
members = ["rhizome", "spore", "tea"]

[workspace.dependencies]
spore = { path = "spore" }
tea = { path = "tea" }

sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio"] }
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
