[package]
name = "sapling"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bcrypt = "0.16.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["serde", "chrono"] }

sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tea = { workspace = true }
spore = { workspace = true }
