[package]
name = "sapling"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bcrypt = "0.16.0"
thiserror = "2.0.9"

tokio = { version = "1.42.0", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["serde", "chrono"] }

uuid = { version = "1.16.0", features = ["serde", "v4", "v7"] }

sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio"] }
serde = { version = "1.0.218", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }

async-graphql = { git = "https://github.com/yasamoka/async-graphql.git", branch = "graphiqlsource-react", features = [
    "chrono",
] } # Temp since current version is broken
async-graphql-axum = { git = "https://github.com/yasamoka/async-graphql.git", branch = "graphiqlsource-react" } # Temp since current version is broken
